// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> Should render multiple elements and match the snapshot 1`] = `
.c0 {
  margin-bottom: 7px;
  width: 100%;
}

.c2 {
  border-radius: 5px;
  color: white;
  cursor: pointer;
  width: 100%;
  margin-right: 5px;
  background-color: rgba(0,0,237,1);
  height: 40px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-right: 12px;
  padding-left: 12px;
}

.c6 .ReactCollapse--collapse {
  -webkit-transition: height 480ms ease;
  transition: height 480ms ease;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
}

.c4 {
  width: auto;
  height: auto;
}

.c5 {
  width: auto;
  height: auto;
  cursor: pointer;
}

<div>
  <div
    class="styled__AccordionContainer-sc-1ls4m2z-0"
  >
    <div>
      <div
        class=" "
      >
        <div
          class="c0"
        >
          <div
            class="c1"
          >
            <div
              class="c2"
              height="40px"
            >
              <div
                class="c3"
              >
                Label0
                 
                <img
                  class="c4"
                  src="IMAGE_MOCK"
                />
              </div>
            </div>
            <img
              alt="bin"
              class="c5"
              src="IMAGE_MOCK"
            />
          </div>
          <div
            class="c6"
          />
        </div>
      </div>
      <div
        class=" "
      >
        <div
          class="c0"
        >
          <div
            class="c1"
          >
            <div
              class="c2"
              height="40px"
            >
              <div
                class="c3"
              >
                Label1
                 
                <img
                  class="c4"
                  src="IMAGE_MOCK"
                />
              </div>
            </div>
            <img
              alt="bin"
              class="c5"
              src="IMAGE_MOCK"
            />
          </div>
          <div
            class="c6"
          />
        </div>
      </div>
      <div
        class=" "
      >
        <div
          class="c0"
        >
          <div
            class="c1"
          >
            <div
              class="c2"
              height="40px"
            >
              <div
                class="c3"
              >
                Label2
                 
                <img
                  class="c4"
                  src="IMAGE_MOCK"
                />
              </div>
            </div>
            <img
              alt="bin"
              class="c5"
              src="IMAGE_MOCK"
            />
          </div>
          <div
            class="c6"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> Should render only one element and match the snapshot 1`] = `
.c0 {
  margin-bottom: 7px;
  width: 100%;
}

.c2 {
  border-radius: 5px;
  color: white;
  cursor: pointer;
  width: 100%;
  margin-right: 5px;
  background-color: rgba(0,0,237,1);
  height: 40px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-right: 12px;
  padding-left: 12px;
}

.c6 .ReactCollapse--collapse {
  -webkit-transition: height 480ms ease;
  transition: height 480ms ease;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
}

.c4 {
  width: auto;
  height: auto;
}

.c5 {
  width: auto;
  height: auto;
  cursor: pointer;
}

<div>
  <div
    class="styled__AccordionContainer-sc-1ls4m2z-0"
  >
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            height="40px"
          >
            <div
              class="c3"
            >
              Label0
               
              <img
                class="c4"
                src="IMAGE_MOCK"
              />
            </div>
          </div>
          <img
            alt="bin"
            class="c5"
            src="IMAGE_MOCK"
          />
        </div>
        <div
          class="c6"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> Should render with one element opened and match the snapshot 1`] = `
.c0 {
  margin-bottom: 7px;
  width: 100%;
}

.c2 {
  border-radius: 5px;
  color: white;
  cursor: pointer;
  width: 100%;
  margin-right: 5px;
  background-color: rgba(0,0,237,1);
  height: 40px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-right: 12px;
  padding-left: 12px;
}

.c6 .ReactCollapse--collapse {
  -webkit-transition: height 480ms ease;
  transition: height 480ms ease;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
}

.c4 {
  width: auto;
  height: auto;
}

.c5 {
  width: auto;
  height: auto;
  cursor: pointer;
}

<div>
  <div
    class="styled__AccordionContainer-sc-1ls4m2z-0"
  >
    <div>
      <div
        class=" "
      >
        <div
          class="c0"
        >
          <div
            class="c1"
          >
            <div
              class="c2"
              height="40px"
            >
              <div
                class="c3"
              >
                Label0
                 
                <img
                  class="c4"
                  src="IMAGE_MOCK"
                />
              </div>
            </div>
            <img
              alt="bin"
              class="c5"
              src="IMAGE_MOCK"
            />
          </div>
          <div
            class="c6"
          />
        </div>
      </div>
      <div
        class=" "
      >
        <div
          class="c0"
        >
          <div
            class="c1"
          >
            <div
              class="c2"
              height="40px"
            >
              <div
                class="c3"
              >
                Label1
                 
                <img
                  class="c4"
                  src="IMAGE_MOCK"
                />
              </div>
            </div>
            <img
              alt="bin"
              class="c5"
              src="IMAGE_MOCK"
            />
          </div>
          <div
            class="c6"
          />
        </div>
      </div>
      <div
        class=" "
      >
        <div
          class="c0"
        >
          <div
            class="c1"
          >
            <div
              class="c2"
              height="40px"
            >
              <div
                class="c3"
              >
                Label2
                 
                <img
                  class="c4"
                  src="IMAGE_MOCK"
                />
              </div>
            </div>
            <img
              alt="bin"
              class="c5"
              src="IMAGE_MOCK"
            />
          </div>
          <div
            class="c6"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
